@@ -44,34 +44,39 @@ ABS_COBCRUN="${abs_top_builddir}/bin/cobcrun@COB_EXE_EXT@"
 #
 # To check with valgrind:
 # * ideally: reconfigure with `./configure --enable-debug & make`
-# * create tests/valgrind
-# * diff these parts into your atlocal (preferably creating a temporary one)
+# * temporarily rename atlocal.in to atlocal.bak and atlocal_valgrind to atlocal.in,
+*   then go to top_builddir and `config.status tests/atlocal`;
+#   - or as a longer altarnative: diff these parts into your atlocal
 # * set switches you need to the following lines and set the tool accordingly (template has MEMCHECK)
 # * if your system ships with valgrind suppression files (default.supp is always active) you likely
-#   want to activate at least the suppressions below (adjusted to your directory)
+#   want to activate at least the suppressions below (adjusted to your directory);
+#   some additional common suppressions (bash + BDB) are found in valgrind.supp and added by default
 # * if you stumble over (other) system library errors you likely want to suppress some of them
-#   --> re-run single tests with --gen-suppressions=yes
+#   --> re-run single tests with --gen-suppressions=yes # when it seems to be stuck press [Y]+[RETURN]...
 #   --> inspect and modify the suppression file
 #   --> add to $VG_SUPPR below
 
 #VG_SUPPR_DIR="/usr/lib/valgrind"
 #VG_SUPPR="--suppressions=$VG_SUPPR_DIR/debian.supp --suppressions=$VG_SUPPR_DIR/ncurses.supp"
-VG_SUPPR=""
+VG_SUPPR="--suppressions=${abs_srcdir}/valgrind.supp $VG_SUPPR"
+
+# Note: other issue, not suppressible is that some COBOL storage is local
+#       and can currently not be freed on STOP RUN (or abort).
+#       It applies to the following elements in the local include files (prog.l*.h)
+#       and dynamically allocated LOCAL-STORAGE (cob_loc_ptr), temporary decimals,
+#       frame_stack, cob_procedure_params.
 
 # Variable part in valgrind log file name via %q (must contain something!)
 # Note: at_group contains the testsuite number in automake generated testsuites
-
-if test "x$1" != "x"; then
-	at_group="$1"            # if not empty: use first parameter from invocation
-else
-	if test "x$at_group" = "x"; then
-		at_group="valgrind"   # default:      use "valgrind"
-	fi
+#       and is (to be) also set when this file is used in other tests for more
+#       useful log file name
+if test "x$at_group" = "x"; then
+	at_group="valgrind"   # default:      use "valgrind"
 fi
-export at_group
+export at_group  # export needed as valgrind resolves that variable later
 
 VL_LOG_DIR="${abs_builddir}/valgrind"
-mkdir -f $VL_LOG_DIR
+mkdir -p $VL_LOG_DIR
 VG_LOG_PREFIX="$VL_LOG_DIR/%q{at_group}_%p"
 
 VG_COBC_LOG="$VG_LOG_PREFIX-cobc.log"
@@ -84,7 +89,6 @@ VG_COBCRUN_DIRECT_LOG="$VG_LOG_PREFIX-cobcrun_direct.log"
 MEMCHECK="valgrind --tool=memcheck --read-var-info=yes --track-origins=yes --leak-check=full --show-leak-kinds=all $VG_SUPPR"
 SGCHECK="valgrind --tool=exp-sgcheck --read-var-info=yes $VG_SUPPR"
 
-# NIST tests (tests/cobol85) are executed in a separate perl process with a new environment --> export needed
 COBC="libtool --mode=execute $MEMCHECK --log-file=$VG_COBC_LOG ${COBC}"
 COBCRUN="libtool --mode=execute $MEMCHECK --log-file=$VG_COBCRUN_LOG ${COBCRUN}"
 COBCRUN_DIRECT="$MEMCHECK --log-file=$VG_COBCRUN_DIRECT_LOG ${COBCRUN_DIRECT}"
@@ -167,14 +171,14 @@ export COB_UNIX_LF
 # for runtime configuration ...
 COB_RUNTIME_CONFIG="${abs_top_srcdir}/config/runtime_empty.cfg"
 export COB_RUNTIME_CONFIG
-for cobenv in $(${LOCAL_ENV} ${COBCRUN} --runtime-conf \
+for cobenv in $(${LOCAL_ENV} ${ABS_COBCRUN} --runtime-conf \
                  | grep " env:" | cut -d: -f2 | cut -d= -f1 \
                  | grep -v "PATH" | grep -v "TERM"); \
 	do _unset_option $cobenv; \
 done
 
 # prevent multiple calls by caching the output
-${LOCAL_ENV} ${COBC} --info > info.out
+${LOCAL_ENV} ${ABS_COBC} --info > info.out
 
 # ... and also unset for the compiler
 if test "$GNUCOBOL_TEST_LOCAL" != "1"; then
@@ -260,6 +264,7 @@ fi
 
 rm -rf info.out
 
+# NIST tests (tests/cobol85) are executed in a separate perl process with a new environment --> export needed
 export COB_HAS_ISAM COB_HAS_XML2 COB_HAS_JSON COB_HAS_CURSES COB_HAS_64_BIT_POINTER
 export COBC COBCRUN COBCRUN_DIRECT RUN_PROG_MANUAL
 export COB_OBJECT_EXT COB_EXE_EXT
