@@ -1,0 +1,27 @@
+{
+   bashMemoryLeak
+   Memcheck:Leak
+   ...
+   obj:/bin/bash
+}
+{
+   bdbBadJump
+   Memcheck:Cond
+   fun:__bam_stkrel
+   fun:__bamc_put
+   fun:__dbc_iput
+}
+{
+   bdbBadWrite
+   Memcheck:Param
+   pwrite64(buf)
+   fun:pwrite
+   fun:__os_io
+   fun:__memp_pgwrite.part.0
+   fun:__memp_pgwrite
+   fun:__memp_bhwrite
+   fun:__memp_sync_int
+   fun:__db_sync
+   fun:__db_refresh
+   fun:__db_close
+}
